@@ -249,6 +249,8 @@ double _lnLambda(spec_t rhok, double Te){
 
 
 
+
+
 /* electron mobility as a function of electron temperature and mass densities*/
 static double _mue_from_Nn_Ni_Te_rhok(double Nn, double Ni, double Te, spec_t rhok){
   double muen,mue,muei;
@@ -493,4 +495,75 @@ void find_nuk_from_Dij(spec_t rhok, spec2_t Dij, spec_t nuk){
     default:
       fatal_error("Problem with MASSDIFFCOEFF in find_nuk_from_Dij().");
   }
+}
+
+
+
+
+
+
+static double _mueN_N2(double Te){
+  double mueN_N2;  
+  /* Data in log-log coordinates. Obtained with BOLSIG+ using Morgan LXCat cross-sections */
+  /* log K */
+  double Te_control[] = 
+  { 
+    2.30258509299405,
+    4.30406509320417,
+    6.11777329755360,
+    6.16032225820390,
+    6.31422787002356,
+    6.65309818932878,
+    7.12888595635390,
+    7.52092804412992,
+    8.05462032845107,
+    8.75401408453109,
+    9.14756478528784,
+    9.34312262669112,
+    9.44165160928006,
+    10.0847647584658,
+    11.1894893389638,
+    11.9794616745625,
+    12.7963582069535
+  };
+  /* log m2/Vs*/
+  double mueN_control[] = 
+  { 
+    67.4168215829997,
+    61.6589718870732,
+    58.8604497828070,
+    58.7654953142236,
+    58.5220600000565,
+    58.1127487333608,
+    57.6332201163168,
+    57.3072804521954,
+    56.9306920039230,
+    56.4577812312559,
+    56.0953860429103,
+    55.7885443350081,
+    55.5658436861888,
+    55.3408534122814,
+    55.1394225183092,
+    54.8599215249993,
+    54.5710926348406
+  };
+  
+  int N = sizeof(Te_control)/sizeof(Te_control[0]);
+  Te=min(Te_control[N-1],max(log( Te ),Te_control[0]));
+  mueN_N2 = EXM_f_from_monotonespline(N, Te_control, mueN_control, Te);
+  return(exp( mueN_N2 ));
+}
+
+
+
+double _mueNk_from_Te(long spec, double Te){
+  double mueN;
+  switch (smap[spec]){
+    case SMAP_N2:
+      mueN=_mueN_N2(Te);
+    break;
+    default:
+      mueN=3.74E19*exp(33.5/sqrt(log(Te)));
+  }
+  return(mueN);
 }
